--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,18 +13,22 @@ jobs:
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
             - vendor
+      #==========ここから追加==========
       - restore_cache:
           key: npm-v1-{{ checksum "package-lock.json" }}
+      #==========ここまで追加==========
+      #==========ここから追加==========
       - run:
           name: npm ci
           command: |
             if [ ! -d node_modules ]; then
               npm ci
-            fi
+            fi 
       - save_cache:
           key: npm-v1-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
+      #==========ここまで追加==========
       - run: npm run dev
       - run:
           name: php test
