--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,16 +6,15 @@ jobs:
     steps:
       - checkout
       - run: sudo composer self-update --1
+      - restore_cache:
+          key: composer-v1-{{ checksum "composer.lock" }}
       - run: composer install -n --prefer-dist
       - save_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
             - vendor
-      #==========ここから追加==========
       - restore_cache:
           key: npm-v1-{{ checksum "package-lock.json" }}
-      #==========ここまで追加==========
-      #==========ここから追加==========
       - run:
           name: npm ci
           command: |
@@ -26,8 +25,6 @@ jobs:
           key: npm-v1-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      #==========ここまで追加==========
-      - run: npm ci
       - run: npm run dev
       - run:
           name: php test
