--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/socialite": "^4.3",
+        "laravel/framework": "^6.2|^8.0",
+        "laravel/socialite": "^4.4.1",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
